adjust .postContext to stop text from overflowing the flex-child.

--- a/src/index.css
+++ b/src/index.css
@@ -234,6 +234,9 @@ header form {
 }
 .postContext {
   flex-grow: 1;
+  /* 2 rules to stop text items within overflowing */
+  min-width: 0;
+  overflow:hidden;
 }
 
 .postmetaData {
